--- a/noteboke.ipynb
+++ b/noteboke.ipynb
@@ -65,7 +65,9 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import joblib\n"
    ]
   },
   {
@@ -1772,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1877,7 @@
        "                               num_parallel_tree=None, random_state=None, ...))])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1953,7 @@
        "                ('decision_tree', DecisionTreeClassifier())])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2013,7 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.95      0.80      0.87    174959\n",
-      "           1       0.49      0.80      0.61     40446\n",
+      "           1       0.49      0.80      0.60     40446\n",
       "\n",
       "    accuracy                           0.80    215405\n",
       "   macro avg       0.72      0.80      0.74    215405\n",
@@ -2029,17 +2031,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### saving of the model and pipleline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xgb.joblib']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Save the best Xgb model\n",
+    "joblib.dump(Xgb_pipeline, 'xgb.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dt.joblib']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the best decision tree model\n",
+    "joblib.dump( decision_tree_pipeline, 'dt.joblib')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Evaluation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  load the model \n",
+    "loaded_model = joblib.load('model/xgb.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, ..., 1, 0, 1])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fit the model on the train data\n",
+    "model = loaded_model.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "test_predictions = model.predict(df_test)\n",
+    "\n",
+    "test_predictions"
    ]
   },
   {
